Update openapi.yml file && Add find_flows function
